--- a/RestaurantApp/app.json
+++ b/RestaurantApp/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hassakornb.RestaurantApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1f41fceb-2289-4637-be77-a20ca26a82ff"
+      }
     }
   }
 }
